fix: info Alert border-top on Mobile

--- a/src/components/common/Alert/Alert.module.scss
+++ b/src/components/common/Alert/Alert.module.scss
@@ -138,7 +138,7 @@
         border-top: 7px solid;
         text-align: center;
 
-        &.information {
+        &.info {
           border-top-color: $ambire-dark-blue;
         }
   
